--- a/public/html/detailpage.html
+++ b/public/html/detailpage.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>登录</title>
+    <title>商品详情</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/detailpage.css">
     <link rel="stylesheet" href="../css/footer.css">
 </head>
 
@@ -105,10 +106,97 @@
             </ul>
         </div>
     </div>
+    <div class="container">
+        <div class="col-lg-6 container cpimg">
+            <ul class="col-lg-2 itme-img">
+                <li class="itme-i cl">
+                    <img src="../images/cp01-1.jpg" alt="">
+                </li>
+                <li class="itme-i">
+                    <img src="../images/cp01-2.jpg" alt="">
+                </li>
+                <li class="itme-i">
+                    <img src="../images/cp01-3.jpg" alt="">
+                </li>
+                <li class="itme-i">
+                    <img src="../images/cp01-4.jpg" alt="">
+                </li>
+                <li class="itme-i">
+                    <img src="../images/cp01-5.jpg" alt="">
+                </li>
+            </ul>
+            <div class="col-lg-10 xxk">
+                <div class="xxk-t" style="display: block;">
+                    <div class="small_box row">
+                        <span class="mask"></span>
+                        <span class="float_layer"></span>
+                        <img src="../images/cp01-1.jpg">
+                    </div>
+                    <div class="big_box">
+                        <img src="../images/cp01-1.jpg">
+                    </div>
+                </div>
+                <!--   <div class="xxk-t">
+                    <div class="small_box row">
+                        <span class="mask"></span>
+                        <span class="float_layer"></span>
+                        <img src="../images/cp01-2.jpg">
+                    </div>
+                    <div class="big_box">
+                        <img src="../images/cp01-2.jpg">
+                    </div>
+                </div>
+                <div class="xxk-t">
+                    <div class="small_box row">
+                        <span class="mask"></span>
+                        <span class="float_layer"></span>
+                        <img src="../images/cp01-3.jpg">
+                    </div>
+                    <div class="big_box">
+                        <img src="../images/cp01-3.jpg">
+                    </div>
+                </div>
+                <div class="xxk-t">
+                    <div class="small_box row">
+                        <span class="mask"></span>
+                        <span class="float_layer"></span>
+                        <img src="../images/cp01-4.jpg">
+                    </div>
+                    <div class="big_box">
+                        <img src="../images/cp01-4.jpg">
+                    </div>
+                </div>
+                <div class="xxk-t">
+                    <div class="small_box row">
+                        <span class="mask"></span>
+                        <span class="float_layer"></span>
+                        <img src="../images/cp01-5.jpg">
+                    </div>
+                    <div class="big_box">
+                        <img src="../images/cp01-5.jpg">
+                    </div>
+                </div> -->
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <p>活动：<span> 订单满200元免运费（门店急送订单除外）</span></p>
+            <div> <span>初上市价格:￥999.00</span> </div>
+            <p>尺码：</p>
+            <div></div>
+            <div></div>
+            <div></div>
+            <input type="button" value="立即购买">
+            <input type="button" value="加入购物车">
+            <p>支持30天无理由退换货 &nbsp;&nbsp;&nbsp;&nbsp; <span class="glyphicon glyphicon-share">分享商品</span>&nbsp;&nbsp;&nbsp; <span class="glyphicon glyphicon-heart">收藏</span> </p>
 
-
-
-
+        </div>
+    </div>
+    <div class="container detail-det">
+        <p class="h2 text-center"> 商品详情</p>
+        <p>产品参数：</p>
+        <p class="text-center"><span class="pull-left">上市季节：2019年冬季</span> 货号：419989000 <span class="pull-right"> 颜色：03 灰色 09 黑色 17 枣红色 57 深橄榄色 67 海蓝色 69 藏青色</span> </p>
+        <p>尺码：160/76A/XS 165/84A/S 170/92A/M 175/100A</p>
+    </div>
     <footer>
         <div class="container ">
             <a href="# " class="pull-left "><img src="../images/LOGO.gif " alt=" " style="width:100%; "></a>
@@ -147,5 +235,6 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+<script src="../js/detailpage.js"></script>
 
 </html>
