--- a/public/index.html
+++ b/public/index.html
@@ -20,19 +20,19 @@
             <div class="col-lg-9 col-md-offset-3">
                 <ul class="clear">
                     <li>
-                        <a href=""><span>注册</span></a>
+                        <a href="./html/reg.html"><span>注册</span></a>
                     </li>
                     <li>
-                        <a href=""><span>登录</span></a>
+                        <a href="./html/login.html"><span>登录</span></a>
                     </li>
                     <li>
-                        <a href=""> <span class="glyphicon glyphicon-user"><p>账户</p> </span></a>
+                        <a href="./html/detailpage.html"> <span class="glyphicon glyphicon-user"><p>账户</p> </span></a>
                     </li>
                     <li>
                         <a href=""> <span class="glyphicon glyphicon-heart"><p>收藏夹</p></span></a>
                     </li>
                     <li>
-                        <a href=""><span class="glyphicon glyphicon-shopping-cart"><p>购物车</p><span class="glyphicon glyphicon-menu-down"></span> </span></a>
+                        <a href="./html/shopcar.html"><span class="glyphicon glyphicon-shopping-cart"><p>购物车</p><span class="glyphicon glyphicon-menu-down"></span> </span></a>
                     </li>
                     <li>
                         <a href=""><span class="glyphicon glyphicon-envelope"><p>站内信</p></span></a>
